--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -12,12 +12,9 @@
     
 - name: grafana | install grafana & certbot
   apt:
-    name: "{{ item }}"
+    name: ['grafana', 'certbot']
     state: present
     update_cache: true
-  with_items:
-    - grafana
-    - certbot
 
 - name: grafana | enable grafana service but stopped so we can get a certificate
   systemd:
@@ -97,16 +94,16 @@
 - name: grafana | edit /etc/grafana/grafana.ini change protocol to https
   replace:
     path: /etc/grafana/grafana.ini
-    after: '# Protocol (http, https, h2, socket)'
-    before: '# The ip address to bind to, empty will bind to all interfaces'
+    after: '# Protocol'
+    before: '# The ip address to bind to'
     regexp: '^;(protocol = http)'
     replace:    '\1s'           
 
 - name: grafana | edit /etc/grafana/grafana.ini change port to 443
   replace:
     path: /etc/grafana/grafana.ini
-    after: '# The http port  to use'
-    before: '# The public facing domain name used to access grafana from a browser'
+    after: '# The http port'
+    before: '# The public facing'
     regexp: '^;(port =) \d+'
     replace:    '\1 443'      
 
