--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -94,7 +94,7 @@
 - name: grafana | allow sslcerts group to read privkey1.pem
   file:
     path: "/etc/letsencrypt/archive/{{cert_domain}}/privkey1.pem"
-    state: present
+    state: file
     mode: 0640
  
 
