--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -17,4 +17,4 @@ certbot_auto_renew_deploy_hooks:
   - systemctl stop grafana-server
   - systemctl start grafana-server
   
-cert_domain: "206-12-92-26.cloud.computecanada.ca"      
+cert_domain: ""      
